--- a/Code/CS331-PA-1.vcxproj
+++ b/Code/CS331-PA-1.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="IDDF.h" />
     <ClInclude Include="Print.h" />
     <ClInclude Include="ReadFile.h" />
+    <ClInclude Include="Tree.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
