--- a/Code/CS331-PA-1.vcxproj
+++ b/Code/CS331-PA-1.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Print.cpp" />
     <ClCompile Include="ReadFile.cpp" />
+    <ClCompile Include="Search.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h" />
