--- a/Code/CS331-PA-1.vcxproj
+++ b/Code/CS331-PA-1.vcxproj
@@ -85,6 +85,7 @@
   <ItemGroup>
     <ClInclude Include="Const.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="hash.h" />
     <ClInclude Include="Print.h" />
     <ClInclude Include="ReadFile.h" />
     <ClInclude Include="Search.h">
