--- a/Code/CS331-PA-1.vcxproj.filters
+++ b/Code/CS331-PA-1.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Const.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="hash.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
